APIs/googleapis.com/displayvideo/v2/java-client/README.md
# openapi-java-client

Display &amp; Video 360 API
- API version: v2
  - Build date: 2024-10-12T11:45:09.670881-04:00[America/New_York]
  - Generator version: 7.9.0

Display & Video 360 API allows users to automate complex Display & Video 360 workflows, such as creating insertion orders and setting targeting options for individual line items.

  For more information, please visit [https://google.com](https://google.com)

*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>v2</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:v2"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-v2.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.auth.*;
import org.openapitools.client.model.*;
import org.openapitools.client.api.AdvertisersApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("https://displayvideo.googleapis.com");
    
    // Configure OAuth2 access token for authorization: Oauth2c
    OAuth Oauth2c = (OAuth) defaultClient.getAuthentication("Oauth2c");
    Oauth2c.setAccessToken("YOUR ACCESS TOKEN");

    // Configure OAuth2 access token for authorization: Oauth2
    OAuth Oauth2 = (OAuth) defaultClient.getAuthentication("Oauth2");
    Oauth2.setAccessToken("YOUR ACCESS TOKEN");

    AdvertisersApi apiInstance = new AdvertisersApi(defaultClient);
    String advertiserId = "advertiserId_example"; // String | Required. The ID of the advertiser this asset belongs to.
    String $xgafv = "1"; // String | V1 error format.
    String accessToken = "accessToken_example"; // String | OAuth access token.
    String alt = "json"; // String | Data format for response.
    String paramCallback = "paramCallback_example"; // String | JSONP
    String fields = "fields_example"; // String | Selector specifying which fields to include in a partial response.
    String key = "key_example"; // String | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
    String oauthToken = "oauthToken_example"; // String | OAuth 2.0 token for the current user.
    Boolean prettyPrint = true; // Boolean | Returns response with indentations and line breaks.
    String quotaUser = "quotaUser_example"; // String | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
    String uploadProtocol = "uploadProtocol_example"; // String | Upload protocol for media (e.g. \"raw\", \"multipart\").
    String uploadType = "uploadType_example"; // String | Legacy upload protocol for media (e.g. \"media\", \"multipart\").
    CreateAssetRequest createAssetRequest = new CreateAssetRequest(); // CreateAssetRequest | 
    try {
      CreateAssetResponse result = apiInstance.displayvideoAdvertisersAssetsUpload(advertiserId, $xgafv, accessToken, alt, paramCallback, fields, key, oauthToken, prettyPrint, quotaUser, uploadProtocol, uploadType, createAssetRequest);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling AdvertisersApi#displayvideoAdvertisersAssetsUpload");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *https://displayvideo.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AdvertisersApi* | [**displayvideoAdvertisersAssetsUpload**](docs/AdvertisersApi.md#displayvideoAdvertisersAssetsUpload) | **POST** /v2/advertisers/{advertiserId}/assets | 
*AdvertisersApi* | [**displayvideoAdvertisersAudit**](docs/AdvertisersApi.md#displayvideoAdvertisersAudit) | **GET** /v2/advertisers/{advertiserId}:audit | 
*AdvertisersApi* | [**displayvideoAdvertisersCampaignsCreate**](docs/AdvertisersApi.md#displayvideoAdvertisersCampaignsCreate) | **POST** /v2/advertisers/{advertiserId}/campaigns | 
*AdvertisersApi* | [**displayvideoAdvertisersCampaignsDelete**](docs/AdvertisersApi.md#displayvideoAdvertisersCampaignsDelete) | **DELETE** /v2/advertisers/{advertiserId}/campaigns/{campaignId} | 
*AdvertisersApi* | [**displayvideoAdvertisersCampaignsGet**](docs/AdvertisersApi.md#displayvideoAdvertisersCampaignsGet) | **GET** /v2/advertisers/{advertiserId}/campaigns/{campaignId} | 
*AdvertisersApi* | [**displayvideoAdvertisersCampaignsList**](docs/AdvertisersApi.md#displayvideoAdvertisersCampaignsList) | **GET** /v2/advertisers/{advertiserId}/campaigns | 
*AdvertisersApi* | [**displayvideoAdvertisersCampaignsListAssignedTargetingOptions**](docs/AdvertisersApi.md#displayvideoAdvertisersCampaignsListAssignedTargetingOptions) | **GET** /v2/advertisers/{advertiserId}/campaigns/{campaignId}:listAssignedTargetingOptions | 
*AdvertisersApi* | [**displayvideoAdvertisersCampaignsPatch**](docs/AdvertisersApi.md#displayvideoAdvertisersCampaignsPatch) | **PATCH** /v2/advertisers/{advertiserId}/campaigns/{campaignId} | 
*AdvertisersApi* | [**displayvideoAdvertisersCampaignsTargetingTypesAssignedTargetingOptionsGet**](docs/AdvertisersApi.md#displayvideoAdvertisersCampaignsTargetingTypesAssignedTargetingOptionsGet) | **GET** /v2/advertisers/{advertiserId}/campaigns/{campaignId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*AdvertisersApi* | [**displayvideoAdvertisersCampaignsTargetingTypesAssignedTargetingOptionsList**](docs/AdvertisersApi.md#displayvideoAdvertisersCampaignsTargetingTypesAssignedTargetingOptionsList) | **GET** /v2/advertisers/{advertiserId}/campaigns/{campaignId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*AdvertisersApi* | [**displayvideoAdvertisersChannelsCreate**](docs/AdvertisersApi.md#displayvideoAdvertisersChannelsCreate) | **POST** /v2/advertisers/{advertiserId}/channels | 
*AdvertisersApi* | [**displayvideoAdvertisersChannelsList**](docs/AdvertisersApi.md#displayvideoAdvertisersChannelsList) | **GET** /v2/advertisers/{advertiserId}/channels | 
*AdvertisersApi* | [**displayvideoAdvertisersChannelsPatch**](docs/AdvertisersApi.md#displayvideoAdvertisersChannelsPatch) | **PATCH** /v2/advertisers/{advertiserId}/channels/{channelId} | 
*AdvertisersApi* | [**displayvideoAdvertisersChannelsSitesBulkEdit**](docs/AdvertisersApi.md#displayvideoAdvertisersChannelsSitesBulkEdit) | **POST** /v2/advertisers/{advertiserId}/channels/{channelId}/sites:bulkEdit | 
*AdvertisersApi* | [**displayvideoAdvertisersChannelsSitesDelete**](docs/AdvertisersApi.md#displayvideoAdvertisersChannelsSitesDelete) | **DELETE** /v2/advertisers/{advertiserId}/channels/{channelId}/sites/{urlOrAppId} | 
*AdvertisersApi* | [**displayvideoAdvertisersChannelsSitesList**](docs/AdvertisersApi.md#displayvideoAdvertisersChannelsSitesList) | **GET** /v2/advertisers/{advertiserId}/channels/{channelId}/sites | 
*AdvertisersApi* | [**displayvideoAdvertisersChannelsSitesReplace**](docs/AdvertisersApi.md#displayvideoAdvertisersChannelsSitesReplace) | **POST** /v2/advertisers/{advertiserId}/channels/{channelId}/sites:replace | 
*AdvertisersApi* | [**displayvideoAdvertisersCreate**](docs/AdvertisersApi.md#displayvideoAdvertisersCreate) | **POST** /v2/advertisers | 
*AdvertisersApi* | [**displayvideoAdvertisersCreativesCreate**](docs/AdvertisersApi.md#displayvideoAdvertisersCreativesCreate) | **POST** /v2/advertisers/{advertiserId}/creatives | 
*AdvertisersApi* | [**displayvideoAdvertisersCreativesDelete**](docs/AdvertisersApi.md#displayvideoAdvertisersCreativesDelete) | **DELETE** /v2/advertisers/{advertiserId}/creatives/{creativeId} | 
*AdvertisersApi* | [**displayvideoAdvertisersCreativesGet**](docs/AdvertisersApi.md#displayvideoAdvertisersCreativesGet) | **GET** /v2/advertisers/{advertiserId}/creatives/{creativeId} | 
*AdvertisersApi* | [**displayvideoAdvertisersCreativesList**](docs/AdvertisersApi.md#displayvideoAdvertisersCreativesList) | **GET** /v2/advertisers/{advertiserId}/creatives | 
*AdvertisersApi* | [**displayvideoAdvertisersCreativesPatch**](docs/AdvertisersApi.md#displayvideoAdvertisersCreativesPatch) | **PATCH** /v2/advertisers/{advertiserId}/creatives/{creativeId} | 
*AdvertisersApi* | [**displayvideoAdvertisersDelete**](docs/AdvertisersApi.md#displayvideoAdvertisersDelete) | **DELETE** /v2/advertisers/{advertiserId} | 
*AdvertisersApi* | [**displayvideoAdvertisersEditAssignedTargetingOptions**](docs/AdvertisersApi.md#displayvideoAdvertisersEditAssignedTargetingOptions) | **POST** /v2/advertisers/{advertiserId}:editAssignedTargetingOptions | 
*AdvertisersApi* | [**displayvideoAdvertisersGet**](docs/AdvertisersApi.md#displayvideoAdvertisersGet) | **GET** /v2/advertisers/{advertiserId} | 
*AdvertisersApi* | [**displayvideoAdvertisersInsertionOrdersCreate**](docs/AdvertisersApi.md#displayvideoAdvertisersInsertionOrdersCreate) | **POST** /v2/advertisers/{advertiserId}/insertionOrders | 
*AdvertisersApi* | [**displayvideoAdvertisersInsertionOrdersDelete**](docs/AdvertisersApi.md#displayvideoAdvertisersInsertionOrdersDelete) | **DELETE** /v2/advertisers/{advertiserId}/insertionOrders/{insertionOrderId} | 
*AdvertisersApi* | [**displayvideoAdvertisersInsertionOrdersGet**](docs/AdvertisersApi.md#displayvideoAdvertisersInsertionOrdersGet) | **GET** /v2/advertisers/{advertiserId}/insertionOrders/{insertionOrderId} | 
*AdvertisersApi* | [**displayvideoAdvertisersInsertionOrdersList**](docs/AdvertisersApi.md#displayvideoAdvertisersInsertionOrdersList) | **GET** /v2/advertisers/{advertiserId}/insertionOrders | 
*AdvertisersApi* | [**displayvideoAdvertisersInsertionOrdersListAssignedTargetingOptions**](docs/AdvertisersApi.md#displayvideoAdvertisersInsertionOrdersListAssignedTargetingOptions) | **GET** /v2/advertisers/{advertiserId}/insertionOrders/{insertionOrderId}:listAssignedTargetingOptions | 
*AdvertisersApi* | [**displayvideoAdvertisersInsertionOrdersPatch**](docs/AdvertisersApi.md#displayvideoAdvertisersInsertionOrdersPatch) | **PATCH** /v2/advertisers/{advertiserId}/insertionOrders/{insertionOrderId} | 
*AdvertisersApi* | [**displayvideoAdvertisersInsertionOrdersTargetingTypesAssignedTargetingOptionsCreate**](docs/AdvertisersApi.md#displayvideoAdvertisersInsertionOrdersTargetingTypesAssignedTargetingOptionsCreate) | **POST** /v2/advertisers/{advertiserId}/insertionOrders/{insertionOrderId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*AdvertisersApi* | [**displayvideoAdvertisersInsertionOrdersTargetingTypesAssignedTargetingOptionsDelete**](docs/AdvertisersApi.md#displayvideoAdvertisersInsertionOrdersTargetingTypesAssignedTargetingOptionsDelete) | **DELETE** /v2/advertisers/{advertiserId}/insertionOrders/{insertionOrderId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*AdvertisersApi* | [**displayvideoAdvertisersInsertionOrdersTargetingTypesAssignedTargetingOptionsGet**](docs/AdvertisersApi.md#displayvideoAdvertisersInsertionOrdersTargetingTypesAssignedTargetingOptionsGet) | **GET** /v2/advertisers/{advertiserId}/insertionOrders/{insertionOrderId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*AdvertisersApi* | [**displayvideoAdvertisersInsertionOrdersTargetingTypesAssignedTargetingOptionsList**](docs/AdvertisersApi.md#displayvideoAdvertisersInsertionOrdersTargetingTypesAssignedTargetingOptionsList) | **GET** /v2/advertisers/{advertiserId}/insertionOrders/{insertionOrderId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*AdvertisersApi* | [**displayvideoAdvertisersInvoicesList**](docs/AdvertisersApi.md#displayvideoAdvertisersInvoicesList) | **GET** /v2/advertisers/{advertiserId}/invoices | 
*AdvertisersApi* | [**displayvideoAdvertisersInvoicesLookupInvoiceCurrency**](docs/AdvertisersApi.md#displayvideoAdvertisersInvoicesLookupInvoiceCurrency) | **GET** /v2/advertisers/{advertiserId}/invoices:lookupInvoiceCurrency | 
*AdvertisersApi* | [**displayvideoAdvertisersLineItemsBulkEditAssignedTargetingOptions**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsBulkEditAssignedTargetingOptions) | **POST** /v2/advertisers/{advertiserId}/lineItems:bulkEditAssignedTargetingOptions | 
*AdvertisersApi* | [**displayvideoAdvertisersLineItemsBulkListAssignedTargetingOptions**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsBulkListAssignedTargetingOptions) | **GET** /v2/advertisers/{advertiserId}/lineItems:bulkListAssignedTargetingOptions | 
*AdvertisersApi* | [**displayvideoAdvertisersLineItemsBulkUpdate**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsBulkUpdate) | **POST** /v2/advertisers/{advertiserId}/lineItems:bulkUpdate | 
*AdvertisersApi* | [**displayvideoAdvertisersLineItemsCreate**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsCreate) | **POST** /v2/advertisers/{advertiserId}/lineItems | 
*AdvertisersApi* | [**displayvideoAdvertisersLineItemsDelete**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsDelete) | **DELETE** /v2/advertisers/{advertiserId}/lineItems/{lineItemId} | 
*AdvertisersApi* | [**displayvideoAdvertisersLineItemsDuplicate**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsDuplicate) | **POST** /v2/advertisers/{advertiserId}/lineItems/{lineItemId}:duplicate | 
*AdvertisersApi* | [**displayvideoAdvertisersLineItemsGenerateDefault**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsGenerateDefault) | **POST** /v2/advertisers/{advertiserId}/lineItems:generateDefault | 
*AdvertisersApi* | [**displayvideoAdvertisersLineItemsGet**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsGet) | **GET** /v2/advertisers/{advertiserId}/lineItems/{lineItemId} | 
*AdvertisersApi* | [**displayvideoAdvertisersLineItemsList**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsList) | **GET** /v2/advertisers/{advertiserId}/lineItems | 
*AdvertisersApi* | [**displayvideoAdvertisersLineItemsPatch**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsPatch) | **PATCH** /v2/advertisers/{advertiserId}/lineItems/{lineItemId} | 
*AdvertisersApi* | [**displayvideoAdvertisersLineItemsTargetingTypesAssignedTargetingOptionsCreate**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsTargetingTypesAssignedTargetingOptionsCreate) | **POST** /v2/advertisers/{advertiserId}/lineItems/{lineItemId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*AdvertisersApi* | [**displayvideoAdvertisersLineItemsTargetingTypesAssignedTargetingOptionsDelete**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsTargetingTypesAssignedTargetingOptionsDelete) | **DELETE** /v2/advertisers/{advertiserId}/lineItems/{lineItemId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*AdvertisersApi* | [**displayvideoAdvertisersLineItemsTargetingTypesAssignedTargetingOptionsGet**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsTargetingTypesAssignedTargetingOptionsGet) | **GET** /v2/advertisers/{advertiserId}/lineItems/{lineItemId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*AdvertisersApi* | [**displayvideoAdvertisersLineItemsTargetingTypesAssignedTargetingOptionsList**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsTargetingTypesAssignedTargetingOptionsList) | **GET** /v2/advertisers/{advertiserId}/lineItems/{lineItemId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*AdvertisersApi* | [**displayvideoAdvertisersList**](docs/AdvertisersApi.md#displayvideoAdvertisersList) | **GET** /v2/advertisers | 
*AdvertisersApi* | [**displayvideoAdvertisersListAssignedTargetingOptions**](docs/AdvertisersApi.md#displayvideoAdvertisersListAssignedTargetingOptions) | **GET** /v2/advertisers/{advertiserId}:listAssignedTargetingOptions | 
*AdvertisersApi* | [**displayvideoAdvertisersLocationListsAssignedLocationsBulkEdit**](docs/AdvertisersApi.md#displayvideoAdvertisersLocationListsAssignedLocationsBulkEdit) | **POST** /v2/advertisers/{advertiserId}/locationLists/{locationListId}/assignedLocations:bulkEdit | 
*AdvertisersApi* | [**displayvideoAdvertisersLocationListsAssignedLocationsCreate**](docs/AdvertisersApi.md#displayvideoAdvertisersLocationListsAssignedLocationsCreate) | **POST** /v2/advertisers/{advertiserId}/locationLists/{locationListId}/assignedLocations | 
*AdvertisersApi* | [**displayvideoAdvertisersLocationListsAssignedLocationsDelete**](docs/AdvertisersApi.md#displayvideoAdvertisersLocationListsAssignedLocationsDelete) | **DELETE** /v2/advertisers/{advertiserId}/locationLists/{locationListId}/assignedLocations/{assignedLocationId} | 
*AdvertisersApi* | [**displayvideoAdvertisersLocationListsAssignedLocationsList**](docs/AdvertisersApi.md#displayvideoAdvertisersLocationListsAssignedLocationsList) | **GET** /v2/advertisers/{advertiserId}/locationLists/{locationListId}/assignedLocations | 
*AdvertisersApi* | [**displayvideoAdvertisersLocationListsCreate**](docs/AdvertisersApi.md#displayvideoAdvertisersLocationListsCreate) | **POST** /v2/advertisers/{advertiserId}/locationLists | 
*AdvertisersApi* | [**displayvideoAdvertisersLocationListsList**](docs/AdvertisersApi.md#displayvideoAdvertisersLocationListsList) | **GET** /v2/advertisers/{advertiserId}/locationLists | 
*AdvertisersApi* | [**displayvideoAdvertisersLocationListsPatch**](docs/AdvertisersApi.md#displayvideoAdvertisersLocationListsPatch) | **PATCH** /v2/advertisers/{advertiserId}/locationLists/{locationListId} | 
*AdvertisersApi* | [**displayvideoAdvertisersManualTriggersActivate**](docs/AdvertisersApi.md#displayvideoAdvertisersManualTriggersActivate) | **POST** /v2/advertisers/{advertiserId}/manualTriggers/{triggerId}:activate | 
*AdvertisersApi* | [**displayvideoAdvertisersManualTriggersCreate**](docs/AdvertisersApi.md#displayvideoAdvertisersManualTriggersCreate) | **POST** /v2/advertisers/{advertiserId}/manualTriggers | 
*AdvertisersApi* | [**displayvideoAdvertisersManualTriggersDeactivate**](docs/AdvertisersApi.md#displayvideoAdvertisersManualTriggersDeactivate) | **POST** /v2/advertisers/{advertiserId}/manualTriggers/{triggerId}:deactivate | 
*AdvertisersApi* | [**displayvideoAdvertisersManualTriggersGet**](docs/AdvertisersApi.md#displayvideoAdvertisersManualTriggersGet) | **GET** /v2/advertisers/{advertiserId}/manualTriggers/{triggerId} | 
*AdvertisersApi* | [**displayvideoAdvertisersManualTriggersList**](docs/AdvertisersApi.md#displayvideoAdvertisersManualTriggersList) | **GET** /v2/advertisers/{advertiserId}/manualTriggers | 
*AdvertisersApi* | [**displayvideoAdvertisersManualTriggersPatch**](docs/AdvertisersApi.md#displayvideoAdvertisersManualTriggersPatch) | **PATCH** /v2/advertisers/{advertiserId}/manualTriggers/{triggerId} | 
*AdvertisersApi* | [**displayvideoAdvertisersNegativeKeywordListsCreate**](docs/AdvertisersApi.md#displayvideoAdvertisersNegativeKeywordListsCreate) | **POST** /v2/advertisers/{advertiserId}/negativeKeywordLists | 
*AdvertisersApi* | [**displayvideoAdvertisersNegativeKeywordListsList**](docs/AdvertisersApi.md#displayvideoAdvertisersNegativeKeywordListsList) | **GET** /v2/advertisers/{advertiserId}/negativeKeywordLists | 
*AdvertisersApi* | [**displayvideoAdvertisersNegativeKeywordListsNegativeKeywordsBulkEdit**](docs/AdvertisersApi.md#displayvideoAdvertisersNegativeKeywordListsNegativeKeywordsBulkEdit) | **POST** /v2/advertisers/{advertiserId}/negativeKeywordLists/{negativeKeywordListId}/negativeKeywords:bulkEdit | 
*AdvertisersApi* | [**displayvideoAdvertisersNegativeKeywordListsNegativeKeywordsDelete**](docs/AdvertisersApi.md#displayvideoAdvertisersNegativeKeywordListsNegativeKeywordsDelete) | **DELETE** /v2/advertisers/{advertiserId}/negativeKeywordLists/{negativeKeywordListId}/negativeKeywords/{keywordValue} | 
*AdvertisersApi* | [**displayvideoAdvertisersNegativeKeywordListsNegativeKeywordsList**](docs/AdvertisersApi.md#displayvideoAdvertisersNegativeKeywordListsNegativeKeywordsList) | **GET** /v2/advertisers/{advertiserId}/negativeKeywordLists/{negativeKeywordListId}/negativeKeywords | 
*AdvertisersApi* | [**displayvideoAdvertisersNegativeKeywordListsNegativeKeywordsReplace**](docs/AdvertisersApi.md#displayvideoAdvertisersNegativeKeywordListsNegativeKeywordsReplace) | **POST** /v2/advertisers/{advertiserId}/negativeKeywordLists/{negativeKeywordListId}/negativeKeywords:replace | 
*AdvertisersApi* | [**displayvideoAdvertisersNegativeKeywordListsPatch**](docs/AdvertisersApi.md#displayvideoAdvertisersNegativeKeywordListsPatch) | **PATCH** /v2/advertisers/{advertiserId}/negativeKeywordLists/{negativeKeywordListId} | 
*AdvertisersApi* | [**displayvideoAdvertisersPatch**](docs/AdvertisersApi.md#displayvideoAdvertisersPatch) | **PATCH** /v2/advertisers/{advertiserId} | 
*AdvertisersApi* | [**displayvideoAdvertisersTargetingTypesAssignedTargetingOptionsCreate**](docs/AdvertisersApi.md#displayvideoAdvertisersTargetingTypesAssignedTargetingOptionsCreate) | **POST** /v2/advertisers/{advertiserId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*AdvertisersApi* | [**displayvideoAdvertisersTargetingTypesAssignedTargetingOptionsDelete**](docs/AdvertisersApi.md#displayvideoAdvertisersTargetingTypesAssignedTargetingOptionsDelete) | **DELETE** /v2/advertisers/{advertiserId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*AdvertisersApi* | [**displayvideoAdvertisersTargetingTypesAssignedTargetingOptionsGet**](docs/AdvertisersApi.md#displayvideoAdvertisersTargetingTypesAssignedTargetingOptionsGet) | **GET** /v2/advertisers/{advertiserId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*AdvertisersApi* | [**displayvideoAdvertisersTargetingTypesAssignedTargetingOptionsList**](docs/AdvertisersApi.md#displayvideoAdvertisersTargetingTypesAssignedTargetingOptionsList) | **GET** /v2/advertisers/{advertiserId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*AdvertisersApi* | [**displayvideoAdvertisersYoutubeAdGroupAdsGet**](docs/AdvertisersApi.md#displayvideoAdvertisersYoutubeAdGroupAdsGet) | **GET** /v2/advertisers/{advertiserId}/youtubeAdGroupAds/{youtubeAdGroupAdId} | 
*AdvertisersApi* | [**displayvideoAdvertisersYoutubeAdGroupAdsList**](docs/AdvertisersApi.md#displayvideoAdvertisersYoutubeAdGroupAdsList) | **GET** /v2/advertisers/{advertiserId}/youtubeAdGroupAds | 
*AdvertisersApi* | [**displayvideoAdvertisersYoutubeAdGroupsBulkListAdGroupAssignedTargetingOptions**](docs/AdvertisersApi.md#displayvideoAdvertisersYoutubeAdGroupsBulkListAdGroupAssignedTargetingOptions) | **GET** /v2/advertisers/{advertiserId}/youtubeAdGroups:bulkListAdGroupAssignedTargetingOptions | 
*AdvertisersApi* | [**displayvideoAdvertisersYoutubeAdGroupsGet**](docs/AdvertisersApi.md#displayvideoAdvertisersYoutubeAdGroupsGet) | **GET** /v2/advertisers/{advertiserId}/youtubeAdGroups/{youtubeAdGroupId} | 
*AdvertisersApi* | [**displayvideoAdvertisersYoutubeAdGroupsList**](docs/AdvertisersApi.md#displayvideoAdvertisersYoutubeAdGroupsList) | **GET** /v2/advertisers/{advertiserId}/youtubeAdGroups | 
*AdvertisersApi* | [**displayvideoAdvertisersYoutubeAdGroupsTargetingTypesAssignedTargetingOptionsGet**](docs/AdvertisersApi.md#displayvideoAdvertisersYoutubeAdGroupsTargetingTypesAssignedTargetingOptionsGet) | **GET** /v2/advertisers/{advertiserId}/youtubeAdGroups/{youtubeAdGroupId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*AdvertisersApi* | [**displayvideoAdvertisersYoutubeAdGroupsTargetingTypesAssignedTargetingOptionsList**](docs/AdvertisersApi.md#displayvideoAdvertisersYoutubeAdGroupsTargetingTypesAssignedTargetingOptionsList) | **GET** /v2/advertisers/{advertiserId}/youtubeAdGroups/{youtubeAdGroupId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*CombinedAudiencesApi* | [**displayvideoCombinedAudiencesGet**](docs/CombinedAudiencesApi.md#displayvideoCombinedAudiencesGet) | **GET** /v2/combinedAudiences/{combinedAudienceId} | 
*CombinedAudiencesApi* | [**displayvideoCombinedAudiencesList**](docs/CombinedAudiencesApi.md#displayvideoCombinedAudiencesList) | **GET** /v2/combinedAudiences | 
*CustomBiddingAlgorithmsApi* | [**displayvideoCustomBiddingAlgorithmsCreate**](docs/CustomBiddingAlgorithmsApi.md#displayvideoCustomBiddingAlgorithmsCreate) | **POST** /v2/customBiddingAlgorithms | 
*CustomBiddingAlgorithmsApi* | [**displayvideoCustomBiddingAlgorithmsGet**](docs/CustomBiddingAlgorithmsApi.md#displayvideoCustomBiddingAlgorithmsGet) | **GET** /v2/customBiddingAlgorithms/{customBiddingAlgorithmId} | 
*CustomBiddingAlgorithmsApi* | [**displayvideoCustomBiddingAlgorithmsList**](docs/CustomBiddingAlgorithmsApi.md#displayvideoCustomBiddingAlgorithmsList) | **GET** /v2/customBiddingAlgorithms | 
*CustomBiddingAlgorithmsApi* | [**displayvideoCustomBiddingAlgorithmsPatch**](docs/CustomBiddingAlgorithmsApi.md#displayvideoCustomBiddingAlgorithmsPatch) | **PATCH** /v2/customBiddingAlgorithms/{customBiddingAlgorithmId} | 
*CustomBiddingAlgorithmsApi* | [**displayvideoCustomBiddingAlgorithmsScriptsCreate**](docs/CustomBiddingAlgorithmsApi.md#displayvideoCustomBiddingAlgorithmsScriptsCreate) | **POST** /v2/customBiddingAlgorithms/{customBiddingAlgorithmId}/scripts | 
*CustomBiddingAlgorithmsApi* | [**displayvideoCustomBiddingAlgorithmsScriptsGet**](docs/CustomBiddingAlgorithmsApi.md#displayvideoCustomBiddingAlgorithmsScriptsGet) | **GET** /v2/customBiddingAlgorithms/{customBiddingAlgorithmId}/scripts/{customBiddingScriptId} | 
*CustomBiddingAlgorithmsApi* | [**displayvideoCustomBiddingAlgorithmsScriptsList**](docs/CustomBiddingAlgorithmsApi.md#displayvideoCustomBiddingAlgorithmsScriptsList) | **GET** /v2/customBiddingAlgorithms/{customBiddingAlgorithmId}/scripts | 
*CustomBiddingAlgorithmsApi* | [**displayvideoCustomBiddingAlgorithmsUploadScript**](docs/CustomBiddingAlgorithmsApi.md#displayvideoCustomBiddingAlgorithmsUploadScript) | **GET** /v2/customBiddingAlgorithms/{customBiddingAlgorithmId}:uploadScript | 
*CustomListsApi* | [**displayvideoCustomListsGet**](docs/CustomListsApi.md#displayvideoCustomListsGet) | **GET** /v2/customLists/{customListId} | 
*CustomListsApi* | [**displayvideoCustomListsList**](docs/CustomListsApi.md#displayvideoCustomListsList) | **GET** /v2/customLists | 
*FirstAndThirdPartyAudiencesApi* | [**displayvideoFirstAndThirdPartyAudiencesCreate**](docs/FirstAndThirdPartyAudiencesApi.md#displayvideoFirstAndThirdPartyAudiencesCreate) | **POST** /v2/firstAndThirdPartyAudiences | 
*FirstAndThirdPartyAudiencesApi* | [**displayvideoFirstAndThirdPartyAudiencesEditCustomerMatchMembers**](docs/FirstAndThirdPartyAudiencesApi.md#displayvideoFirstAndThirdPartyAudiencesEditCustomerMatchMembers) | **POST** /v2/firstAndThirdPartyAudiences/{firstAndThirdPartyAudienceId}:editCustomerMatchMembers | 
*FirstAndThirdPartyAudiencesApi* | [**displayvideoFirstAndThirdPartyAudiencesGet**](docs/FirstAndThirdPartyAudiencesApi.md#displayvideoFirstAndThirdPartyAudiencesGet) | **GET** /v2/firstAndThirdPartyAudiences/{firstAndThirdPartyAudienceId} | 
*FirstAndThirdPartyAudiencesApi* | [**displayvideoFirstAndThirdPartyAudiencesList**](docs/FirstAndThirdPartyAudiencesApi.md#displayvideoFirstAndThirdPartyAudiencesList) | **GET** /v2/firstAndThirdPartyAudiences | 
*FirstAndThirdPartyAudiencesApi* | [**displayvideoFirstAndThirdPartyAudiencesPatch**](docs/FirstAndThirdPartyAudiencesApi.md#displayvideoFirstAndThirdPartyAudiencesPatch) | **PATCH** /v2/firstAndThirdPartyAudiences/{firstAndThirdPartyAudienceId} | 
*FloodlightGroupsApi* | [**displayvideoFloodlightGroupsFloodlightActivitiesGet**](docs/FloodlightGroupsApi.md#displayvideoFloodlightGroupsFloodlightActivitiesGet) | **GET** /v2/floodlightGroups/{floodlightGroupId}/floodlightActivities/{floodlightActivityId} | 
*FloodlightGroupsApi* | [**displayvideoFloodlightGroupsFloodlightActivitiesList**](docs/FloodlightGroupsApi.md#displayvideoFloodlightGroupsFloodlightActivitiesList) | **GET** /v2/floodlightGroups/{floodlightGroupId}/floodlightActivities | 
*FloodlightGroupsApi* | [**displayvideoFloodlightGroupsGet**](docs/FloodlightGroupsApi.md#displayvideoFloodlightGroupsGet) | **GET** /v2/floodlightGroups/{floodlightGroupId} | 
*GoogleAudiencesApi* | [**displayvideoGoogleAudiencesGet**](docs/GoogleAudiencesApi.md#displayvideoGoogleAudiencesGet) | **GET** /v2/googleAudiences/{googleAudienceId} | 
*GoogleAudiencesApi* | [**displayvideoGoogleAudiencesList**](docs/GoogleAudiencesApi.md#displayvideoGoogleAudiencesList) | **GET** /v2/googleAudiences | 
*GuaranteedOrdersApi* | [**displayvideoGuaranteedOrdersCreate**](docs/GuaranteedOrdersApi.md#displayvideoGuaranteedOrdersCreate) | **POST** /v2/guaranteedOrders | 
*GuaranteedOrdersApi* | [**displayvideoGuaranteedOrdersEditGuaranteedOrderReadAccessors**](docs/GuaranteedOrdersApi.md#displayvideoGuaranteedOrdersEditGuaranteedOrderReadAccessors) | **POST** /v2/guaranteedOrders/{guaranteedOrderId}:editGuaranteedOrderReadAccessors | 
*GuaranteedOrdersApi* | [**displayvideoGuaranteedOrdersGet**](docs/GuaranteedOrdersApi.md#displayvideoGuaranteedOrdersGet) | **GET** /v2/guaranteedOrders/{guaranteedOrderId} | 
*GuaranteedOrdersApi* | [**displayvideoGuaranteedOrdersList**](docs/GuaranteedOrdersApi.md#displayvideoGuaranteedOrdersList) | **GET** /v2/guaranteedOrders | 
*GuaranteedOrdersApi* | [**displayvideoGuaranteedOrdersPatch**](docs/GuaranteedOrdersApi.md#displayvideoGuaranteedOrdersPatch) | **PATCH** /v2/guaranteedOrders/{guaranteedOrderId} | 
*InventorySourceGroupsApi* | [**displayvideoInventorySourceGroupsAssignedInventorySourcesBulkEdit**](docs/InventorySourceGroupsApi.md#displayvideoInventorySourceGroupsAssignedInventorySourcesBulkEdit) | **POST** /v2/inventorySourceGroups/{inventorySourceGroupId}/assignedInventorySources:bulkEdit | 
*InventorySourceGroupsApi* | [**displayvideoInventorySourceGroupsAssignedInventorySourcesCreate**](docs/InventorySourceGroupsApi.md#displayvideoInventorySourceGroupsAssignedInventorySourcesCreate) | **POST** /v2/inventorySourceGroups/{inventorySourceGroupId}/assignedInventorySources | 
*InventorySourceGroupsApi* | [**displayvideoInventorySourceGroupsAssignedInventorySourcesDelete**](docs/InventorySourceGroupsApi.md#displayvideoInventorySourceGroupsAssignedInventorySourcesDelete) | **DELETE** /v2/inventorySourceGroups/{inventorySourceGroupId}/assignedInventorySources/{assignedInventorySourceId} | 
*InventorySourceGroupsApi* | [**displayvideoInventorySourceGroupsAssignedInventorySourcesList**](docs/InventorySourceGroupsApi.md#displayvideoInventorySourceGroupsAssignedInventorySourcesList) | **GET** /v2/inventorySourceGroups/{inventorySourceGroupId}/assignedInventorySources | 
*InventorySourceGroupsApi* | [**displayvideoInventorySourceGroupsCreate**](docs/InventorySourceGroupsApi.md#displayvideoInventorySourceGroupsCreate) | **POST** /v2/inventorySourceGroups | 
*InventorySourceGroupsApi* | [**displayvideoInventorySourceGroupsDelete**](docs/InventorySourceGroupsApi.md#displayvideoInventorySourceGroupsDelete) | **DELETE** /v2/inventorySourceGroups/{inventorySourceGroupId} | 
*InventorySourceGroupsApi* | [**displayvideoInventorySourceGroupsGet**](docs/InventorySourceGroupsApi.md#displayvideoInventorySourceGroupsGet) | **GET** /v2/inventorySourceGroups/{inventorySourceGroupId} | 
*InventorySourceGroupsApi* | [**displayvideoInventorySourceGroupsList**](docs/InventorySourceGroupsApi.md#displayvideoInventorySourceGroupsList) | **GET** /v2/inventorySourceGroups | 
*InventorySourcesApi* | [**displayvideoInventorySourcesCreate**](docs/InventorySourcesApi.md#displayvideoInventorySourcesCreate) | **POST** /v2/inventorySources | 
*InventorySourcesApi* | [**displayvideoInventorySourcesEditInventorySourceReadWriteAccessors**](docs/InventorySourcesApi.md#displayvideoInventorySourcesEditInventorySourceReadWriteAccessors) | **POST** /v2/inventorySources/{inventorySourceId}:editInventorySourceReadWriteAccessors | 
*InventorySourcesApi* | [**displayvideoInventorySourcesGet**](docs/InventorySourcesApi.md#displayvideoInventorySourcesGet) | **GET** /v2/inventorySources/{inventorySourceId} | 
*InventorySourcesApi* | [**displayvideoInventorySourcesList**](docs/InventorySourcesApi.md#displayvideoInventorySourcesList) | **GET** /v2/inventorySources | 
*InventorySourcesApi* | [**displayvideoInventorySourcesPatch**](docs/InventorySourcesApi.md#displayvideoInventorySourcesPatch) | **PATCH** /v2/inventorySources/{inventorySourceId} | 
*MediaApi* | [**displayvideoMediaDownload**](docs/MediaApi.md#displayvideoMediaDownload) | **GET** /download/{resourceName} | 
*MediaApi* | [**displayvideoMediaUpload**](docs/MediaApi.md#displayvideoMediaUpload) | **POST** /media/{resourceName} | 
*PartnersApi* | [**displayvideoPartnersChannelsCreate**](docs/PartnersApi.md#displayvideoPartnersChannelsCreate) | **POST** /v2/partners/{partnerId}/channels | 
*PartnersApi* | [**displayvideoPartnersChannelsList**](docs/PartnersApi.md#displayvideoPartnersChannelsList) | **GET** /v2/partners/{partnerId}/channels | 
*PartnersApi* | [**displayvideoPartnersChannelsPatch**](docs/PartnersApi.md#displayvideoPartnersChannelsPatch) | **PATCH** /v2/partners/{partnerId}/channels/{channelId} | 
*PartnersApi* | [**displayvideoPartnersChannelsSitesBulkEdit**](docs/PartnersApi.md#displayvideoPartnersChannelsSitesBulkEdit) | **POST** /v2/partners/{partnerId}/channels/{channelId}/sites:bulkEdit | 
*PartnersApi* | [**displayvideoPartnersChannelsSitesDelete**](docs/PartnersApi.md#displayvideoPartnersChannelsSitesDelete) | **DELETE** /v2/partners/{partnerId}/channels/{channelId}/sites/{urlOrAppId} | 
*PartnersApi* | [**displayvideoPartnersChannelsSitesList**](docs/PartnersApi.md#displayvideoPartnersChannelsSitesList) | **GET** /v2/partners/{partnerId}/channels/{channelId}/sites | 
*PartnersApi* | [**displayvideoPartnersChannelsSitesReplace**](docs/PartnersApi.md#displayvideoPartnersChannelsSitesReplace) | **POST** /v2/partners/{partnerId}/channels/{channelId}/sites:replace | 
*PartnersApi* | [**displayvideoPartnersEditAssignedTargetingOptions**](docs/PartnersApi.md#displayvideoPartnersEditAssignedTargetingOptions) | **POST** /v2/partners/{partnerId}:editAssignedTargetingOptions | 
*PartnersApi* | [**displayvideoPartnersGet**](docs/PartnersApi.md#displayvideoPartnersGet) | **GET** /v2/partners/{partnerId} | 
*PartnersApi* | [**displayvideoPartnersList**](docs/PartnersApi.md#displayvideoPartnersList) | **GET** /v2/partners | 
*PartnersApi* | [**displayvideoPartnersTargetingTypesAssignedTargetingOptionsCreate**](docs/PartnersApi.md#displayvideoPartnersTargetingTypesAssignedTargetingOptionsCreate) | **POST** /v2/partners/{partnerId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*PartnersApi* | [**displayvideoPartnersTargetingTypesAssignedTargetingOptionsDelete**](docs/PartnersApi.md#displayvideoPartnersTargetingTypesAssignedTargetingOptionsDelete) | **DELETE** /v2/partners/{partnerId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*PartnersApi* | [**displayvideoPartnersTargetingTypesAssignedTargetingOptionsGet**](docs/PartnersApi.md#displayvideoPartnersTargetingTypesAssignedTargetingOptionsGet) | **GET** /v2/partners/{partnerId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*PartnersApi* | [**displayvideoPartnersTargetingTypesAssignedTargetingOptionsList**](docs/PartnersApi.md#displayvideoPartnersTargetingTypesAssignedTargetingOptionsList) | **GET** /v2/partners/{partnerId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*SdfdownloadtasksApi* | [**displayvideoSdfdownloadtasksCreate**](docs/SdfdownloadtasksApi.md#displayvideoSdfdownloadtasksCreate) | **POST** /v2/sdfdownloadtasks | 
*SdfdownloadtasksApi* | [**displayvideoSdfdownloadtasksOperationsGet**](docs/SdfdownloadtasksApi.md#displayvideoSdfdownloadtasksOperationsGet) | **GET** /v2/{name} | 
*TargetingTypesApi* | [**displayvideoTargetingTypesTargetingOptionsGet**](docs/TargetingTypesApi.md#displayvideoTargetingTypesTargetingOptionsGet) | **GET** /v2/targetingTypes/{targetingType}/targetingOptions/{targetingOptionId} | 
*TargetingTypesApi* | [**displayvideoTargetingTypesTargetingOptionsList**](docs/TargetingTypesApi.md#displayvideoTargetingTypesTargetingOptionsList) | **GET** /v2/targetingTypes/{targetingType}/targetingOptions | 
*TargetingTypesApi* | [**displayvideoTargetingTypesTargetingOptionsSearch**](docs/TargetingTypesApi.md#displayvideoTargetingTypesTargetingOptionsSearch) | **POST** /v2/targetingTypes/{targetingType}/targetingOptions:search | 
*UsersApi* | [**displayvideoUsersBulkEditAssignedUserRoles**](docs/UsersApi.md#displayvideoUsersBulkEditAssignedUserRoles) | **POST** /v2/users/{userId}:bulkEditAssignedUserRoles | 
*UsersApi* | [**displayvideoUsersCreate**](docs/UsersApi.md#displayvideoUsersCreate) | **POST** /v2/users | 
*UsersApi* | [**displayvideoUsersDelete**](docs/UsersApi.md#displayvideoUsersDelete) | **DELETE** /v2/users/{userId} | 
*UsersApi* | [**displayvideoUsersGet**](docs/UsersApi.md#displayvideoUsersGet) | **GET** /v2/users/{userId} | 
*UsersApi* | [**displayvideoUsersList**](docs/UsersApi.md#displayvideoUsersList) | **GET** /v2/users | 
*UsersApi* | [**displayvideoUsersPatch**](docs/UsersApi.md#displayvideoUsersPatch) | **PATCH** /v2/users/{userId} | 


## Documentation for Models

 - [ActiveViewVideoViewabilityMetricConfig](docs/ActiveViewVideoViewabilityMetricConfig.md)
 - [AdUrl](docs/AdUrl.md)
 - [Adloox](docs/Adloox.md)
 - [Advertiser](docs/Advertiser.md)
 - [AdvertiserAdServerConfig](docs/AdvertiserAdServerConfig.md)
 - [AdvertiserBillingConfig](docs/AdvertiserBillingConfig.md)
 - [AdvertiserCreativeConfig](docs/AdvertiserCreativeConfig.md)
 - [AdvertiserDataAccessConfig](docs/AdvertiserDataAccessConfig.md)
 - [AdvertiserGeneralConfig](docs/AdvertiserGeneralConfig.md)
 - [AdvertiserSdfConfig](docs/AdvertiserSdfConfig.md)
 - [AdvertiserTargetingConfig](docs/AdvertiserTargetingConfig.md)
 - [AgeRangeAssignedTargetingOptionDetails](docs/AgeRangeAssignedTargetingOptionDetails.md)
 - [AgeRangeTargetingOptionDetails](docs/AgeRangeTargetingOptionDetails.md)
 - [AppAssignedTargetingOptionDetails](docs/AppAssignedTargetingOptionDetails.md)
 - [AppCategoryAssignedTargetingOptionDetails](docs/AppCategoryAssignedTargetingOptionDetails.md)
 - [AppCategoryTargetingOptionDetails](docs/AppCategoryTargetingOptionDetails.md)
 - [Asset](docs/Asset.md)
 - [AssetAssociation](docs/AssetAssociation.md)
 - [AssignedInventorySource](docs/AssignedInventorySource.md)
 - [AssignedLocation](docs/AssignedLocation.md)
 - [AssignedTargetingOption](docs/AssignedTargetingOption.md)
 - [AssignedUserRole](docs/AssignedUserRole.md)
 - [AudienceGroupAssignedTargetingOptionDetails](docs/AudienceGroupAssignedTargetingOptionDetails.md)
 - [AudioAd](docs/AudioAd.md)
 - [AudioContentTypeAssignedTargetingOptionDetails](docs/AudioContentTypeAssignedTargetingOptionDetails.md)
 - [AudioContentTypeTargetingOptionDetails](docs/AudioContentTypeTargetingOptionDetails.md)
 - [AudioVideoOffset](docs/AudioVideoOffset.md)
 - [AuditAdvertiserResponse](docs/AuditAdvertiserResponse.md)
 - [AuthorizedSellerStatusAssignedTargetingOptionDetails](docs/AuthorizedSellerStatusAssignedTargetingOptionDetails.md)
 - [AuthorizedSellerStatusTargetingOptionDetails](docs/AuthorizedSellerStatusTargetingOptionDetails.md)
 - [BiddingStrategy](docs/BiddingStrategy.md)
 - [BrowserAssignedTargetingOptionDetails](docs/BrowserAssignedTargetingOptionDetails.md)
 - [BrowserTargetingOptionDetails](docs/BrowserTargetingOptionDetails.md)
 - [BudgetSummary](docs/BudgetSummary.md)
 - [BulkEditAdvertiserAssignedTargetingOptionsRequest](docs/BulkEditAdvertiserAssignedTargetingOptionsRequest.md)
 - [BulkEditAdvertiserAssignedTargetingOptionsResponse](docs/BulkEditAdvertiserAssignedTargetingOptionsResponse.md)
 - [BulkEditAssignedInventorySourcesRequest](docs/BulkEditAssignedInventorySourcesRequest.md)
 - [BulkEditAssignedInventorySourcesResponse](docs/BulkEditAssignedInventorySourcesResponse.md)
 - [BulkEditAssignedLocationsRequest](docs/BulkEditAssignedLocationsRequest.md)
 - [BulkEditAssignedLocationsResponse](docs/BulkEditAssignedLocationsResponse.md)
 - [BulkEditAssignedTargetingOptionsRequest](docs/BulkEditAssignedTargetingOptionsRequest.md)
 - [BulkEditAssignedTargetingOptionsResponse](docs/BulkEditAssignedTargetingOptionsResponse.md)
 - [BulkEditAssignedUserRolesRequest](docs/BulkEditAssignedUserRolesRequest.md)
 - [BulkEditAssignedUserRolesResponse](docs/BulkEditAssignedUserRolesResponse.md)
 - [BulkEditNegativeKeywordsRequest](docs/BulkEditNegativeKeywordsRequest.md)
 - [BulkEditNegativeKeywordsResponse](docs/BulkEditNegativeKeywordsResponse.md)
 - [BulkEditPartnerAssignedTargetingOptionsRequest](docs/BulkEditPartnerAssignedTargetingOptionsRequest.md)
 - [BulkEditPartnerAssignedTargetingOptionsResponse](docs/BulkEditPartnerAssignedTargetingOptionsResponse.md)
 - [BulkEditSitesRequest](docs/BulkEditSitesRequest.md)
 - [BulkEditSitesResponse](docs/BulkEditSitesResponse.md)
 - [BulkListAdGroupAssignedTargetingOptionsResponse](docs/BulkListAdGroupAssignedTargetingOptionsResponse.md)
 - [BulkListAdvertiserAssignedTargetingOptionsResponse](docs/BulkListAdvertiserAssignedTargetingOptionsResponse.md)
 - [BulkListAssignedTargetingOptionsResponse](docs/BulkListAssignedTargetingOptionsResponse.md)
 - [BulkListCampaignAssignedTargetingOptionsResponse](docs/BulkListCampaignAssignedTargetingOptionsResponse.md)
 - [BulkListInsertionOrderAssignedTargetingOptionsResponse](docs/BulkListInsertionOrderAssignedTargetingOptionsResponse.md)
 - [BulkUpdateLineItemsRequest](docs/BulkUpdateLineItemsRequest.md)
 - [BulkUpdateLineItemsResponse](docs/BulkUpdateLineItemsResponse.md)
 - [BumperAd](docs/BumperAd.md)
 - [BusinessChainAssignedTargetingOptionDetails](docs/BusinessChainAssignedTargetingOptionDetails.md)
 - [BusinessChainSearchTerms](docs/BusinessChainSearchTerms.md)
 - [BusinessChainTargetingOptionDetails](docs/BusinessChainTargetingOptionDetails.md)
 - [Campaign](docs/Campaign.md)
 - [CampaignBudget](docs/CampaignBudget.md)
 - [CampaignFlight](docs/CampaignFlight.md)
 - [CampaignGoal](docs/CampaignGoal.md)
 - [CarrierAndIspAssignedTargetingOptionDetails](docs/CarrierAndIspAssignedTargetingOptionDetails.md)
 - [CarrierAndIspTargetingOptionDetails](docs/CarrierAndIspTargetingOptionDetails.md)
 - [CategoryAssignedTargetingOptionDetails](docs/CategoryAssignedTargetingOptionDetails.md)
 - [CategoryTargetingOptionDetails](docs/CategoryTargetingOptionDetails.md)
 - [Channel](docs/Channel.md)
 - [ChannelAssignedTargetingOptionDetails](docs/ChannelAssignedTargetingOptionDetails.md)
 - [CmHybridConfig](docs/CmHybridConfig.md)
 - [CmTrackingAd](docs/CmTrackingAd.md)
 - [CombinedAudience](docs/CombinedAudience.md)
 - [CombinedAudienceGroup](docs/CombinedAudienceGroup.md)
 - [CombinedAudienceTargetingSetting](docs/CombinedAudienceTargetingSetting.md)
 - [CommonInStreamAttribute](docs/CommonInStreamAttribute.md)
 - [Consent](docs/Consent.md)
 - [ContactInfo](docs/ContactInfo.md)
 - [ContactInfoList](docs/ContactInfoList.md)
 - [ContentDurationAssignedTargetingOptionDetails](docs/ContentDurationAssignedTargetingOptionDetails.md)
 - [ContentDurationTargetingOptionDetails](docs/ContentDurationTargetingOptionDetails.md)
 - [ContentGenreAssignedTargetingOptionDetails](docs/ContentGenreAssignedTargetingOptionDetails.md)
 - [ContentGenreTargetingOptionDetails](docs/ContentGenreTargetingOptionDetails.md)
 - [ContentInstreamPositionAssignedTargetingOptionDetails](docs/ContentInstreamPositionAssignedTargetingOptionDetails.md)
 - [ContentInstreamPositionTargetingOptionDetails](docs/ContentInstreamPositionTargetingOptionDetails.md)
 - [ContentOutstreamPositionAssignedTargetingOptionDetails](docs/ContentOutstreamPositionAssignedTargetingOptionDetails.md)
 - [ContentOutstreamPositionTargetingOptionDetails](docs/ContentOutstreamPositionTargetingOptionDetails.md)
 - [ContentStreamTypeAssignedTargetingOptionDetails](docs/ContentStreamTypeAssignedTargetingOptionDetails.md)
 - [ContentStreamTypeTargetingOptionDetails](docs/ContentStreamTypeTargetingOptionDetails.md)
 - [ConversionCountingConfig](docs/ConversionCountingConfig.md)
 - [CounterEvent](docs/CounterEvent.md)
 - [CreateAssetRequest](docs/CreateAssetRequest.md)
 - [CreateAssetResponse](docs/CreateAssetResponse.md)
 - [CreateAssignedTargetingOptionsRequest](docs/CreateAssignedTargetingOptionsRequest.md)
 - [CreateSdfDownloadTaskRequest](docs/CreateSdfDownloadTaskRequest.md)
 - [Creative](docs/Creative.md)
 - [CreativeConfig](docs/CreativeConfig.md)
 - [CustomBiddingAlgorithm](docs/CustomBiddingAlgorithm.md)
 - [CustomBiddingModelDetails](docs/CustomBiddingModelDetails.md)
 - [CustomBiddingScript](docs/CustomBiddingScript.md)
 - [CustomBiddingScriptRef](docs/CustomBiddingScriptRef.md)
 - [CustomLabel](docs/CustomLabel.md)
 - [CustomList](docs/CustomList.md)
 - [CustomListGroup](docs/CustomListGroup.md)
 - [CustomListTargetingSetting](docs/CustomListTargetingSetting.md)
 - [Date](docs/Date.md)
 - [DateRange](docs/DateRange.md)
 - [DayAndTimeAssignedTargetingOptionDetails](docs/DayAndTimeAssignedTargetingOptionDetails.md)
 - [DeleteAssignedTargetingOptionsRequest](docs/DeleteAssignedTargetingOptionsRequest.md)
 - [DeviceMakeModelAssignedTargetingOptionDetails](docs/DeviceMakeModelAssignedTargetingOptionDetails.md)
 - [DeviceMakeModelTargetingOptionDetails](docs/DeviceMakeModelTargetingOptionDetails.md)
 - [DeviceTypeAssignedTargetingOptionDetails](docs/DeviceTypeAssignedTargetingOptionDetails.md)
 - [DeviceTypeTargetingOptionDetails](docs/DeviceTypeTargetingOptionDetails.md)
 - [DigitalContentLabelAssignedTargetingOptionDetails](docs/DigitalContentLabelAssignedTargetingOptionDetails.md)
 - [DigitalContentLabelTargetingOptionDetails](docs/DigitalContentLabelTargetingOptionDetails.md)
 - [Dimensions](docs/Dimensions.md)
 - [DisplayVideoSourceAd](docs/DisplayVideoSourceAd.md)
 - [DoubleVerify](docs/DoubleVerify.md)
 - [DoubleVerifyAppStarRating](docs/DoubleVerifyAppStarRating.md)
 - [DoubleVerifyBrandSafetyCategories](docs/DoubleVerifyBrandSafetyCategories.md)
 - [DoubleVerifyDisplayViewability](docs/DoubleVerifyDisplayViewability.md)
 - [DoubleVerifyFraudInvalidTraffic](docs/DoubleVerifyFraudInvalidTraffic.md)
 - [DoubleVerifyVideoViewability](docs/DoubleVerifyVideoViewability.md)
 - [DuplicateLineItemRequest](docs/DuplicateLineItemRequest.md)
 - [DuplicateLineItemResponse](docs/DuplicateLineItemResponse.md)
 - [EditCustomerMatchMembersRequest](docs/EditCustomerMatchMembersRequest.md)
 - [EditCustomerMatchMembersResponse](docs/EditCustomerMatchMembersResponse.md)
 - [EditGuaranteedOrderReadAccessorsRequest](docs/EditGuaranteedOrderReadAccessorsRequest.md)
 - [EditGuaranteedOrderReadAccessorsResponse](docs/EditGuaranteedOrderReadAccessorsResponse.md)
 - [EditInventorySourceReadWriteAccessorsRequest](docs/EditInventorySourceReadWriteAccessorsRequest.md)
 - [EditInventorySourceReadWriteAccessorsRequestAdvertisersUpdate](docs/EditInventorySourceReadWriteAccessorsRequestAdvertisersUpdate.md)
 - [EnvironmentAssignedTargetingOptionDetails](docs/EnvironmentAssignedTargetingOptionDetails.md)
 - [EnvironmentTargetingOptionDetails](docs/EnvironmentTargetingOptionDetails.md)
 - [ExchangeAssignedTargetingOptionDetails](docs/ExchangeAssignedTargetingOptionDetails.md)
 - [ExchangeConfig](docs/ExchangeConfig.md)
 - [ExchangeConfigEnabledExchange](docs/ExchangeConfigEnabledExchange.md)
 - [ExchangeReviewStatus](docs/ExchangeReviewStatus.md)
 - [ExchangeTargetingOptionDetails](docs/ExchangeTargetingOptionDetails.md)
 - [ExitEvent](docs/ExitEvent.md)
 - [FirstAndThirdPartyAudience](docs/FirstAndThirdPartyAudience.md)
 - [FirstAndThirdPartyAudienceGroup](docs/FirstAndThirdPartyAudienceGroup.md)
 - [FirstAndThirdPartyAudienceTargetingSetting](docs/FirstAndThirdPartyAudienceTargetingSetting.md)
 - [FixedBidStrategy](docs/FixedBidStrategy.md)
 - [FloodlightActivity](docs/FloodlightActivity.md)
 - [FloodlightGroup](docs/FloodlightGroup.md)
 - [FrequencyCap](docs/FrequencyCap.md)
 - [GenderAssignedTargetingOptionDetails](docs/GenderAssignedTargetingOptionDetails.md)
 - [GenderTargetingOptionDetails](docs/GenderTargetingOptionDetails.md)
 - [GenerateDefaultLineItemRequest](docs/GenerateDefaultLineItemRequest.md)
 - [GeoRegionAssignedTargetingOptionDetails](docs/GeoRegionAssignedTargetingOptionDetails.md)
 - [GeoRegionSearchTerms](docs/GeoRegionSearchTerms.md)
 - [GeoRegionTargetingOptionDetails](docs/GeoRegionTargetingOptionDetails.md)
 - [GoogleAudience](docs/GoogleAudience.md)
 - [GoogleAudienceGroup](docs/GoogleAudienceGroup.md)
 - [GoogleAudienceTargetingSetting](docs/GoogleAudienceTargetingSetting.md)
 - [GoogleBytestreamMedia](docs/GoogleBytestreamMedia.md)
 - [GuaranteedOrder](docs/GuaranteedOrder.md)
 - [GuaranteedOrderStatus](docs/GuaranteedOrderStatus.md)
 - [HouseholdIncomeAssignedTargetingOptionDetails](docs/HouseholdIncomeAssignedTargetingOptionDetails.md)
 - [HouseholdIncomeTargetingOptionDetails](docs/HouseholdIncomeTargetingOptionDetails.md)
 - [IdFilter](docs/IdFilter.md)
 - [ImageAsset](docs/ImageAsset.md)
 - [InStreamAd](docs/InStreamAd.md)
 - [InsertionOrder](docs/InsertionOrder.md)
 - [InsertionOrderBudget](docs/InsertionOrderBudget.md)
 - [InsertionOrderBudgetSegment](docs/InsertionOrderBudgetSegment.md)
 - [IntegralAdScience](docs/IntegralAdScience.md)
 - [IntegrationDetails](docs/IntegrationDetails.md)
 - [InventorySource](docs/InventorySource.md)
 - [InventorySourceAccessors](docs/InventorySourceAccessors.md)
 - [InventorySourceAccessorsAdvertiserAccessors](docs/InventorySourceAccessorsAdvertiserAccessors.md)
 - [InventorySourceAccessorsPartnerAccessor](docs/InventorySourceAccessorsPartnerAccessor.md)
 - [InventorySourceAssignedTargetingOptionDetails](docs/InventorySourceAssignedTargetingOptionDetails.md)
 - [InventorySourceDisplayCreativeConfig](docs/InventorySourceDisplayCreativeConfig.md)
 - [InventorySourceFilter](docs/InventorySourceFilter.md)
 - [InventorySourceGroup](docs/InventorySourceGroup.md)
 - [InventorySourceGroupAssignedTargetingOptionDetails](docs/InventorySourceGroupAssignedTargetingOptionDetails.md)
 - [InventorySourceStatus](docs/InventorySourceStatus.md)
 - [InventorySourceVideoCreativeConfig](docs/InventorySourceVideoCreativeConfig.md)
 - [Invoice](docs/Invoice.md)
 - [KeywordAssignedTargetingOptionDetails](docs/KeywordAssignedTargetingOptionDetails.md)
 - [LanguageAssignedTargetingOptionDetails](docs/LanguageAssignedTargetingOptionDetails.md)
 - [LanguageTargetingOptionDetails](docs/LanguageTargetingOptionDetails.md)
 - [LineItem](docs/LineItem.md)
 - [LineItemAssignedTargetingOption](docs/LineItemAssignedTargetingOption.md)
 - [LineItemBudget](docs/LineItemBudget.md)
 - [LineItemFlight](docs/LineItemFlight.md)
 - [ListAdvertiserAssignedTargetingOptionsResponse](docs/ListAdvertiserAssignedTargetingOptionsResponse.md)
 - [ListAdvertisersResponse](docs/ListAdvertisersResponse.md)
 - [ListAssignedInventorySourcesResponse](docs/ListAssignedInventorySourcesResponse.md)
 - [ListAssignedLocationsResponse](docs/ListAssignedLocationsResponse.md)
 - [ListCampaignAssignedTargetingOptionsResponse](docs/ListCampaignAssignedTargetingOptionsResponse.md)
 - [ListCampaignsResponse](docs/ListCampaignsResponse.md)
 - [ListChannelsResponse](docs/ListChannelsResponse.md)
 - [ListCombinedAudiencesResponse](docs/ListCombinedAudiencesResponse.md)
 - [ListCreativesResponse](docs/ListCreativesResponse.md)
 - [ListCustomBiddingAlgorithmsResponse](docs/ListCustomBiddingAlgorithmsResponse.md)
 - [ListCustomBiddingScriptsResponse](docs/ListCustomBiddingScriptsResponse.md)
 - [ListCustomListsResponse](docs/ListCustomListsResponse.md)
 - [ListFirstAndThirdPartyAudiencesResponse](docs/ListFirstAndThirdPartyAudiencesResponse.md)
 - [ListFloodlightActivitiesResponse](docs/ListFloodlightActivitiesResponse.md)
 - [ListGoogleAudiencesResponse](docs/ListGoogleAudiencesResponse.md)
 - [ListGuaranteedOrdersResponse](docs/ListGuaranteedOrdersResponse.md)
 - [ListInsertionOrderAssignedTargetingOptionsResponse](docs/ListInsertionOrderAssignedTargetingOptionsResponse.md)
 - [ListInsertionOrdersResponse](docs/ListInsertionOrdersResponse.md)
 - [ListInventorySourceGroupsResponse](docs/ListInventorySourceGroupsResponse.md)
 - [ListInventorySourcesResponse](docs/ListInventorySourcesResponse.md)
 - [ListInvoicesResponse](docs/ListInvoicesResponse.md)
 - [ListLineItemAssignedTargetingOptionsResponse](docs/ListLineItemAssignedTargetingOptionsResponse.md)
 - [ListLineItemsResponse](docs/ListLineItemsResponse.md)
 - [ListLocationListsResponse](docs/ListLocationListsResponse.md)
 - [ListManualTriggersResponse](docs/ListManualTriggersResponse.md)
 - [ListNegativeKeywordListsResponse](docs/ListNegativeKeywordListsResponse.md)
 - [ListNegativeKeywordsResponse](docs/ListNegativeKeywordsResponse.md)
 - [ListPartnerAssignedTargetingOptionsResponse](docs/ListPartnerAssignedTargetingOptionsResponse.md)
 - [ListPartnersResponse](docs/ListPartnersResponse.md)
 - [ListSitesResponse](docs/ListSitesResponse.md)
 - [ListTargetingOptionsResponse](docs/ListTargetingOptionsResponse.md)
 - [ListUsersResponse](docs/ListUsersResponse.md)
 - [ListYoutubeAdGroupAdsResponse](docs/ListYoutubeAdGroupAdsResponse.md)
 - [ListYoutubeAdGroupAssignedTargetingOptionsResponse](docs/ListYoutubeAdGroupAssignedTargetingOptionsResponse.md)
 - [ListYoutubeAdGroupsResponse](docs/ListYoutubeAdGroupsResponse.md)
 - [LocationList](docs/LocationList.md)
 - [LookbackWindow](docs/LookbackWindow.md)
 - [LookupInvoiceCurrencyResponse](docs/LookupInvoiceCurrencyResponse.md)
 - [ManualTrigger](docs/ManualTrigger.md)
 - [MastheadAd](docs/MastheadAd.md)
 - [MaximizeSpendBidStrategy](docs/MaximizeSpendBidStrategy.md)
 - [MeasurementConfig](docs/MeasurementConfig.md)
 - [MobileApp](docs/MobileApp.md)
 - [MobileDeviceIdList](docs/MobileDeviceIdList.md)
 - [Money](docs/Money.md)
 - [NativeContentPositionAssignedTargetingOptionDetails](docs/NativeContentPositionAssignedTargetingOptionDetails.md)
 - [NativeContentPositionTargetingOptionDetails](docs/NativeContentPositionTargetingOptionDetails.md)
 - [NegativeKeyword](docs/NegativeKeyword.md)
 - [NegativeKeywordList](docs/NegativeKeywordList.md)
 - [NegativeKeywordListAssignedTargetingOptionDetails](docs/NegativeKeywordListAssignedTargetingOptionDetails.md)
 - [NonSkippableAd](docs/NonSkippableAd.md)
 - [ObaIcon](docs/ObaIcon.md)
 - [OmidAssignedTargetingOptionDetails](docs/OmidAssignedTargetingOptionDetails.md)
 - [OmidTargetingOptionDetails](docs/OmidTargetingOptionDetails.md)
 - [OnScreenPositionAssignedTargetingOptionDetails](docs/OnScreenPositionAssignedTargetingOptionDetails.md)
 - [OnScreenPositionTargetingOptionDetails](docs/OnScreenPositionTargetingOptionDetails.md)
 - [OperatingSystemAssignedTargetingOptionDetails](docs/OperatingSystemAssignedTargetingOptionDetails.md)
 - [OperatingSystemTargetingOptionDetails](docs/OperatingSystemTargetingOptionDetails.md)
 - [Operation](docs/Operation.md)
 - [Pacing](docs/Pacing.md)
 - [ParentEntityFilter](docs/ParentEntityFilter.md)
 - [ParentalStatusAssignedTargetingOptionDetails](docs/ParentalStatusAssignedTargetingOptionDetails.md)
 - [ParentalStatusTargetingOptionDetails](docs/ParentalStatusTargetingOptionDetails.md)
 - [Partner](docs/Partner.md)
 - [PartnerAdServerConfig](docs/PartnerAdServerConfig.md)
 - [PartnerCost](docs/PartnerCost.md)
 - [PartnerDataAccessConfig](docs/PartnerDataAccessConfig.md)
 - [PartnerGeneralConfig](docs/PartnerGeneralConfig.md)
 - [PartnerRevenueModel](docs/PartnerRevenueModel.md)
 - [PerformanceGoal](docs/PerformanceGoal.md)
 - [PerformanceGoalBidStrategy](docs/PerformanceGoalBidStrategy.md)
 - [PoiAssignedTargetingOptionDetails](docs/PoiAssignedTargetingOptionDetails.md)
 - [PoiSearchTerms](docs/PoiSearchTerms.md)
 - [PoiTargetingOptionDetails](docs/PoiTargetingOptionDetails.md)
 - [PrismaConfig](docs/PrismaConfig.md)
 - [PrismaCpeCode](docs/PrismaCpeCode.md)
 - [ProductFeedData](docs/ProductFeedData.md)
 - [ProductMatchDimension](docs/ProductMatchDimension.md)
 - [ProximityLocationListAssignedTargetingOptionDetails](docs/ProximityLocationListAssignedTargetingOptionDetails.md)
 - [PublisherReviewStatus](docs/PublisherReviewStatus.md)
 - [RateDetails](docs/RateDetails.md)
 - [RegionalLocationListAssignedTargetingOptionDetails](docs/RegionalLocationListAssignedTargetingOptionDetails.md)
 - [RemarketingConfig](docs/RemarketingConfig.md)
 - [ReplaceNegativeKeywordsRequest](docs/ReplaceNegativeKeywordsRequest.md)
 - [ReplaceNegativeKeywordsResponse](docs/ReplaceNegativeKeywordsResponse.md)
 - [ReplaceSitesRequest](docs/ReplaceSitesRequest.md)
 - [ReplaceSitesResponse](docs/ReplaceSitesResponse.md)
 - [ReviewStatusInfo](docs/ReviewStatusInfo.md)
 - [ScriptError](docs/ScriptError.md)
 - [SdfConfig](docs/SdfConfig.md)
 - [SdfDownloadTask](docs/SdfDownloadTask.md)
 - [SdfDownloadTaskMetadata](docs/SdfDownloadTaskMetadata.md)
 - [SearchTargetingOptionsRequest](docs/SearchTargetingOptionsRequest.md)
 - [SearchTargetingOptionsResponse](docs/SearchTargetingOptionsResponse.md)
 - [SensitiveCategoryAssignedTargetingOptionDetails](docs/SensitiveCategoryAssignedTargetingOptionDetails.md)
 - [SensitiveCategoryTargetingOptionDetails](docs/SensitiveCategoryTargetingOptionDetails.md)
 - [SessionPositionAssignedTargetingOptionDetails](docs/SessionPositionAssignedTargetingOptionDetails.md)
 - [Site](docs/Site.md)
 - [Status](docs/Status.md)
 - [SubExchangeAssignedTargetingOptionDetails](docs/SubExchangeAssignedTargetingOptionDetails.md)
 - [SubExchangeTargetingOptionDetails](docs/SubExchangeTargetingOptionDetails.md)
 - [TargetFrequency](docs/TargetFrequency.md)
 - [TargetingExpansionConfig](docs/TargetingExpansionConfig.md)
 - [TargetingOption](docs/TargetingOption.md)
 - [ThirdPartyOnlyConfig](docs/ThirdPartyOnlyConfig.md)
 - [ThirdPartyUrl](docs/ThirdPartyUrl.md)
 - [ThirdPartyVendorConfig](docs/ThirdPartyVendorConfig.md)
 - [ThirdPartyVerifierAssignedTargetingOptionDetails](docs/ThirdPartyVerifierAssignedTargetingOptionDetails.md)
 - [TimeRange](docs/TimeRange.md)
 - [TimerEvent](docs/TimerEvent.md)
 - [TrackingFloodlightActivityConfig](docs/TrackingFloodlightActivityConfig.md)
 - [Transcode](docs/Transcode.md)
 - [UniversalAdId](docs/UniversalAdId.md)
 - [UrlAssignedTargetingOptionDetails](docs/UrlAssignedTargetingOptionDetails.md)
 - [User](docs/User.md)
 - [UserRewardedContentAssignedTargetingOptionDetails](docs/UserRewardedContentAssignedTargetingOptionDetails.md)
 - [UserRewardedContentTargetingOptionDetails](docs/UserRewardedContentTargetingOptionDetails.md)
 - [VideoAdSequenceSettings](docs/VideoAdSequenceSettings.md)
 - [VideoAdSequenceStep](docs/VideoAdSequenceStep.md)
 - [VideoDiscoveryAd](docs/VideoDiscoveryAd.md)
 - [VideoPerformanceAd](docs/VideoPerformanceAd.md)
 - [VideoPlayerSizeAssignedTargetingOptionDetails](docs/VideoPlayerSizeAssignedTargetingOptionDetails.md)
 - [VideoPlayerSizeTargetingOptionDetails](docs/VideoPlayerSizeTargetingOptionDetails.md)
 - [ViewabilityAssignedTargetingOptionDetails](docs/ViewabilityAssignedTargetingOptionDetails.md)
 - [ViewabilityTargetingOptionDetails](docs/ViewabilityTargetingOptionDetails.md)
 - [YoutubeAdGroup](docs/YoutubeAdGroup.md)
 - [YoutubeAdGroupAd](docs/YoutubeAdGroupAd.md)
 - [YoutubeAdGroupAssignedTargetingOption](docs/YoutubeAdGroupAssignedTargetingOption.md)
 - [YoutubeAndPartnersBiddingStrategy](docs/YoutubeAndPartnersBiddingStrategy.md)
 - [YoutubeAndPartnersInventorySourceConfig](docs/YoutubeAndPartnersInventorySourceConfig.md)
 - [YoutubeAndPartnersSettings](docs/YoutubeAndPartnersSettings.md)
 - [YoutubeAndPartnersThirdPartyMeasurementSettings](docs/YoutubeAndPartnersThirdPartyMeasurementSettings.md)
 - [YoutubeChannelAssignedTargetingOptionDetails](docs/YoutubeChannelAssignedTargetingOptionDetails.md)
 - [YoutubeVideoAssignedTargetingOptionDetails](docs/YoutubeVideoAssignedTargetingOptionDetails.md)
 - [YoutubeVideoDetails](docs/YoutubeVideoDetails.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/display-video: Create, see, edit, and permanently delete your Display &amp; Video 360 entities and reports
  - https://www.googleapis.com/auth/display-video-mediaplanning: Create, see, and edit Display &amp; Video 360 Campaign entities and see billing invoices
  - https://www.googleapis.com/auth/display-video-user-management: Private Service: https://www.googleapis.com/auth/display-video-user-management
  - https://www.googleapis.com/auth/doubleclickbidmanager: View and manage your reports in DoubleClick Bid Manager

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/display-video: Create, see, edit, and permanently delete your Display &amp; Video 360 entities and reports
  - https://www.googleapis.com/auth/display-video-mediaplanning: Create, see, and edit Display &amp; Video 360 Campaign entities and see billing invoices
  - https://www.googleapis.com/auth/display-video-user-management: Private Service: https://www.googleapis.com/auth/display-video-user-management
  - https://www.googleapis.com/auth/doubleclickbidmanager: View and manage your reports in DoubleClick Bid Manager


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author



